<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oracle.cloud.mobile.bots.chatsample.LaunchActivity"
    android:weightSum="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <AutoCompleteTextView
                android:id="@+id/appId"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_margin="16dp"
                android:hint="@string/prompt_App_ID"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/launchactivity_text"
                android:textAlignment="center"
                android:textSize="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center">
                <Button
                    android:id="@+id/ok"
                    style="?android:textAppearanceSmall"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/ok"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancel"
                    style="?android:textAppearanceSmall"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>